# psfmachine

./: .flake8  .gitignore  404.html  CHANGES.rst  CITATION.cff  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: black.yml  flake8.yml  mkdocs.yml  pytest.yml
aperture/: index.html
docs/: aperture.md  aperture_utils.md  ffi.md  index.md  machine.md  perturbation.md  perturbationmatrix3d.md  superstamp.md  tpf.md
docs/tutorials/: Tutorial_10_TPFs.ipynb  Tutorial_11_TPFs.ipynb  Tutorial_20_FFI.ipynb  Tutorial_30_k2ss.ipynb  Tutorial_31_k2ss.ipynb  Tutorial_3_k2_clusters.ipynb
ffi/: index.html
machine/: index.html  machine.md
perturbationmatrix/: index.html
perturbationmatrix3d/: index.html
psfmachine/: __init__.py  collection.py  data.py  ffi_tools.py  machine.py  tpf.py  utils.py
psfmachine/test/: test_machine.py  test_tpfmachine.py
psfmachine/test/data/: tpf_test_01.fits  tpf_test_02.fits  tpf_test_03.fits  tpf_test_04.fits  tpf_test_05.fits  tpf_test_06.fits  tpf_test_07.fits  tpf_test_08.fits  tpf_test_09.fits  tpf_test_10.fits
search/: search_index.json
src/psfmachine/: __init__.py  aperture.py  aperture_utils.py  ffi.py  machine.py  perturbation.py  superstamp.py  tpf.py  utils.py  version.py
src/psfmachine/data/: ffi_prf_models_v0.1.0.csv
superstamp/: index.html
tests/: test_ffimachine.py  test_machine.py  test_perturbation.py  test_tpfmachine.py  test_utils.py
tests/data/: ffi_ch01_test.fits  kplr-ffi_ch01_test.fits  shape_model_ffi.fits  tpf_test_00.fits  tpf_test_01.fits  tpf_test_02.fits  tpf_test_03.fits  tpf_test_04.fits  tpf_test_05.fits  tpf_test_06.fits  tpf_test_07.fits  tpf_test_08.fits  tpf_test_09.fits
tpf/: index.html  tpf.md
tutorials/: Tutorial_3_k2_clusters.ipynb
tutorials/Tutorial_10_TPFs/: index.html
tutorials/Tutorial_11_TPFs/: index.html
tutorials/Tutorial_20_FFI/: index.html
tutorials/Tutorial_30_k2ss/: index.html
tutorials/Tutorial_31_k2ss/: index.html
utils/: index.html  utils.md
