[tool.poetry]
name = "psfmachine"
version = "0.1.0"
description = "Tool to perform fast PSF photometry of primary and background targets from Kepler/K2 Target Pixel Files"
authors = ["Jorge Martinez-Palomera <jorgemarpa@ug.uchile.cl>",
           "Christina Hedges"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jorgemarpa/psfmachine"
repository = "https://github.com/jorgemarpa/psfmachine"
keywords = ["NASA, Kepler, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
scipy = "^1.5.4"
astropy = "^4.2"
tqdm = "^4.54.0"
matplotlib = "^3.3.3"
patsy = "^0.5.1"
pyia = "^1.2"
lightkurve = "^1.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
jupyterlab = "^2.2.2"
line-profiler = "^3.0.2"
memory-profiler = "^0.58.0"
flake8 = "^3.8.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
