[tool.poetry]
name = "psfmachine"
version = "1.1.4"
description = "Tool to perform fast PSF photometry of primary and background targets from Kepler/K2 Target Pixel Files"
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>",
          "Jorge Martinez-Palomera <jorgemarpa@ug.uchile.cl>"]
license = "MIT"
readme = "README.md"
homepage = "https://ssdatalab.github.io/psfmachine/"
repository = "https://github.com/ssdatalab/psfmachine"
keywords = ["NASA, Kepler, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.coverage.paths]
source = ["src"]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scipy = "^1.5.4"
astropy = "^5.2"
tqdm = "^4.54.0"
matplotlib = "^3.3.3"
patsy = "^0.5.1"
pyia = "^1.2"
lightkurve = "^2.0.4"
corner = "^2.1.0"
fitsio = "^1.1.3"
jedi = "0.17.2"
pandas = "^1.1"
photutils = "^1.1.0"
diskcache = "^5.3.0"
imageio = "^2.9.0"
imageio-ffmpeg = "^0.4.5"
kbackground = "^0.1.9"
fbpca = "^1.0"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
jupyterlab = "^2.2.2"
line-profiler = "^3.0.2"
memory-profiler = "^0.58.0"
flake8 = "^3.8.1"
black = "^20.8b1"
exoplanet = "^0.4.4"
ipywidgets = "^7.6.3"
mkdocs = "1.2.3"
mkdocs-material = "^7.0.6"
mkdocstrings = {version = "^0.15.0", extras = ["numpy-style"]}
pytkdocs = {version = "^0.11.0", extras = ["numpy-style"]}
mkdocs-jupyter = "^0.17.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
